# hft-socket-server

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_test.sh  test_scenario.sh
include/: interceptor.hpp  message.hpp  service_manager.hpp  singleton.hpp  socket_server.hpp
src/: interceptor.cpp  main.cpp  message.cpp  service_manager.cpp  singleton.cpp  socket_server.cpp  test_client.cpp
